@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-30T16:21:01Z",
+  "timestamp" : "2023-07-31T01:35:44Z",
   "count_outdated" : 440,
   "uniques_outdated" : 202,
-  "count" : 467,
+  "count" : 468,
   "uniques" : 218,
   "clones" : [
     {
       "timestamp": "2023-07-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
